# Flash

./: .gitignore  Makefile  README.md  config.yaml  log
.github/workflows/: ci.yml
app/: Makefile  cmake_install.cmake
dev/: CMakeLists.txt
dev/app/: CMakeLists.txt
dev/app/src/: main.cpp
dev/cmake/: ConfigBoost.cmake  ConfigCatch2.cmake  ConfigClangTidy.cmake  ConfigDoxygen.cmake  ConfigEigen.cmake  ConfigHDF5.cmake  ConfigYamlCpp.cmake  WriteIncludeDirs.cmake
dev/docs/: Doxyfile
dev/flashlib/: CMakeLists.txt
dev/flashlib/basic/: CMakeLists.txt
dev/flashlib/basic/include/basic/: constants.h  tensors.h  types.h
dev/flashlib/config/include/config/: Keys.h  Node.h  Parameter.h
dev/flashlib/config/include/config/nodes/: Grid.h  GroundState.h
dev/flashlib/config/include/config/parameters/: Matrix.h  Option.h  Scalar.h  Vector.h
dev/flashlib/config/src/: GroundState.cpp
dev/flashlib/configParameters/: CMakeLists.txt
dev/flashlib/configParameters/include/configParameters/: parameter.h  parameter.tpp
dev/flashlib/configuration/: CMakeLists.txt
dev/flashlib/configuration/include/configParameters/: ArrayParameter.h  MatrixParameter.h  Node.h  Parameter.h  RegularGrid.h  ScalarParameter.h
dev/flashlib/constants/: CMakeLists.txt
dev/flashlib/constants/include/constants/: Tensor.h
dev/flashlib/data_processing/: CMakeLists.txt
dev/flashlib/data_processing/include/data_processing/: hdf5.h
dev/libs/: CMakeLists.txt
dev/libs/config/: CMakeLists.txt
dev/libs/config/include/config/: Keys.h  Node.h  Parameter.h  config.h
dev/libs/config/include/config/nodes/: Grid.h  GroundState.h  Peak.h  Spectrum.h
dev/libs/config/include/config/parameters/: Matrix.h  Option.h  Scalar.h  Vector.h
dev/libs/config/src/: config.cpp
dev/libs/constants/: CMakeLists.txt
dev/libs/constants/include/constants/: constants.h  precision.h  tensor.h
dev/libs/data_processing/: CMakeLists.txt
dev/libs/data_processing/include/data_processing/: config.h  config.hpp  hdf5_wrappers.h  read_hdf5.h  yaml.h
dev/libs/data_processing/src/: config.cpp  hdf5.cpp  hdf5_wrappers.cpp  read_hdf5.cpp  yaml.cpp
dev/libs/electrons/: CMakeLists.txt
dev/libs/electrons/include/electrons/: electrons.h
dev/libs/electrons/src/: electrons.cpp
dev/libs/types/: CMakeLists.txt
dev/libs/types/include/types/: types.h
dev/libs/types/src/: types.cpp
dev/linter/: .clang-format  .clang-tidy
dev/tests/: CMakeLists.txt
dev/tests/config/: CMakeLists.txt
dev/tests/config/cmake/: TestConfigNodesGrid.cmake  TestConfigNodesGroundState.cmake  TestConfigNodesPeak.cmake  TestConfigNodesSpectrum.cmake  TestConfigParametersMatrix.cmake  TestConfigParametersOption.cmake  TestConfigParametersScalar.cmake  TestConfigParametersVector.cmake
dev/tests/config/src/: config_test.cpp  test_config_input.cpp  test_config_nodes_Grid.cpp  test_config_nodes_GroundState.cpp  test_config_nodes_Peak.cpp  test_config_nodes_Spectrum.cpp  test_config_parameters_Matrix.cpp  test_config_parameters_Option.cpp  test_config_parameters_Scalar.cpp  test_config_parameters_Vector.cpp
dev/tests/configuration/: CMakeLists.txt
dev/tests/configuration/src/: test_configParameters.cpp
dev/tests/data_processing/: CMakeLists.txt
dev/tests/data_processing/src/: config_test.cpp  hdf5_wrappers_test.cpp
libs/: Makefile  cmake_install.cmake
libs/config/: Makefile  cmake_install.cmake
scripts/bash/: clang-format.sh  clang-tidy.sh  replace.sh
